--- a/templates/base.html
+++ b/templates/base.html
@@ -12,18 +12,12 @@
     <nav>
       <ul>
         {% if user.is_authenticated %}
-
         <li><a href="{% url 'tasks:index' %}">Lista de Tareas</a></li>
         <li><a href="{% url 'logout' %}">Cerrar sesión</a></li>
-        <li>
-          <a href="{% url 'user_detail' pk=user.pk %}">
-            Información para los miembros
-          </a>
-        </li>
+        <li><a href="{% url 'user_detail' pk=user.pk %}">Información para los miembros</a></li>
         {% else %}
         <li><a href="{% url 'login' %}">Iniciar sesión</a></li>
         <li><a href="{% url 'signup' %}">Registrar usuario</a></li>
-
         {% endif %}
       </ul>
     </nav>
