--- a/templates/base.html
+++ b/templates/base.html
@@ -12,17 +12,26 @@
     <nav>
       <ul>
         {% if user.is_authenticated %}
-        <li><a href="{% url 'tasks:index' %}">Lista de Tareas</a></li>
-        <li><a href="{% url 'logout' %}">Cerrar sesión</a></li>
-        <li><a href="{% url 'user_detail' pk=user.pk %}">Información para los miembros</a></li>
+          <li><a href="{% url 'tasks:index' %}">Lista de Tareas</a></li>
+          <li>
+            <form id="logout-form" method="post" action="{% url 'logout' %}">
+              {% csrf_token %}
+              <button type="submit" style="background:none; border:none; padding:0; color:blue; text-decoration:underline; cursor:pointer;">
+                Cerrar sesión
+              </button>
+            </form>
+          </li>
+          <li>
+            <a href="{% url 'user_detail' pk=user.pk %}">Información para los miembros</a>
+          </li>
         {% else %}
-        <li><a href="{% url 'login' %}">Iniciar sesión</a></li>
-        <li><a href="{% url 'signup' %}">Registrar usuario</a></li>
+          <li><a href="{% url 'login' %}">Iniciar sesión</a></li>
+          <li><a href="{% url 'signup' %}">Registrar usuario</a></li>
         {% endif %}
       </ul>
     </nav>
     <main>
-      <div>{% block main %} {% endblock %}</div>
+      <div>{% block main %}{% endblock %}</div>
     </main>
   </body>
 </html>
