--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 
 {% block main %}
-<h2>Página de acceso</h2>
+<h1>Iniciar sesión</h1>
 
 <form method="post">
   {% csrf_token %}
+  <input type="hidden" name="next" value="{{ next }}" />
   {{ form.as_p }}
-  <input type="submit" value="Iniciar sesión" />
+  <input type="submit" value="Iniciar sesión">
 </form>
 {% endblock %}
