--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
           <li>
             <form id="logout-form" method="post" action="{% url 'logout' %}">
               {% csrf_token %}
-              <button type="submit" style="background:none; border:none; padding:0; color:blue; text-decoration:underline; cursor:pointer;">
+              <button type="submit" style="background:none; border:none; padding:15px; color:rgb(255, 255, 255); text-decoration:underline; cursor:pointer;">
                 Cerrar sesión
               </button>
             </form>
